Changelog for SiteAtoZ

Version 1.1.0
-------------
Add option to have no CSS file (thanks to Jako)
Add option to use TV for title search (thanks to Jako)
Add option to use snippets other than getResources (thanks to Jako)
Removed extraneous span tag (thanks to Jako)
Prevent output of empty sections (thanks to Jako)


Version 1.0.3
-------------
Fixed bug in transport package
Added tutorial to docs

Version 1.0.2
-------------
Added JS to hide and show sections

Version 1.0.1
-------------
Added option to combine number categories

SiteAtoZ 1.0.0
-------------------
Initial Version