@@ -7,6 +7,7 @@ Add option to use TV for title search (thanks to Jako)
 Add option to use snippets other than getResources (thanks to Jako)
 Removed extraneous span tag (thanks to Jako)
 Prevent output of empty sections (thanks to Jako)
+Improved output (thanks to Jako)
 
 
 Version 1.0.3
